--- a/_posts/2018-01-12-모각코1차_계획.markdown
+++ b/_posts/2018-01-12-모각코1차_계획.markdown
@@ -8,6 +8,6 @@ categories: jekyll update
 
 이 포스팅은 모(여서)각(자)코(딩) 프로그램의 일환으로 제작되었으며, 첫 번째 모임의 주제는 이 블로그를 최대한 활용하는 방법을 알기 위해, 
 {% highlight ruby %}
-Jekyll 사용하기
+Jekyll 사용하기 및 Html 테마 수정 기능을 포함한 각종 기능 익히기
 {% endhighlight %}
 를 진행하기로 하였습니다.
