--- a/_posts/2018-01-12-모각코1차_계획.markdown
+++ b/_posts/2018-01-12-모각코1차_계획.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "모각코(모여서 각자 코딩) 1회"
 date:   2018-01-12 15:34:48 +0900
-categories: jekyll update
+categories: 모각코
 ---
 이 블로그의 첫 번째 포스팅입니다.
 
