--- a/_posts/2018-01-24-모각코3차_계획.markdown
+++ b/_posts/2018-01-24-모각코3차_계획.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "모각코(모여서 각자 코딩) 3회"
 date:   2018-01-24 18:01:32 +0900
-categories: jekyll update
+categories: 모각코
 ---
 
 이 포스팅은 모(여서)각(자)코(딩) 프로그램의 일환으로 제작되었으며, 세 번째 모임의 주제는 서버가 아직 재설치되지 않은 이유로
