--- a/_posts/2018-01-31-모각코4차_후기.markdown
+++ b/_posts/2018-01-31-모각코4차_후기.markdown
@@ -13,7 +13,7 @@ categories: 모각코
 
 Eclipse che(이클립스 체라고 읽는 것 같습니다)는 우리가 흔히 자바 개발에 사용하는 Eclipse를 거의 그대로 클라우드 IDE 형식으로 옮긴 것이라고 볼 수 있습니다.
 
-이런 재미있는 프로젝트를 발견하면 꼭 써보고 싶어지는 게 개발자 마음 아니겠습니까!
+저는 이런 재미있는 프로젝트를 발견하면 꼭 써보고 싶어지더군요!
 
 ![Eclipse che 검색화면](http://bcnet.iptime.org/2018-01-31-모각코4차_후기/1.PNG)
 
